--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -2,9 +2,18 @@
     font-family: $font-2;
     font-size: 1.6rem;
     text-transform: uppercase;
-    padding: .5em 2em;
     letter-spacing: 5px;
-    border-radius: none;
+
     border: 2px solid $col-black;
+    border-radius: none;
+    padding: .5em 2em;
+    
     background-color: $col-white;
+
+    cursor: pointer;
+
+    &:hover {
+        background-color: $col-black;
+        color: $col-white;
+    }
 }
