--- a/css/main.css
+++ b/css/main.css
@@ -294,10 +294,16 @@ main {
   font-family: "Alata", sans-serif;
   font-size: 1.6rem;
   text-transform: uppercase;
-  padding: .5em 2em;
   letter-spacing: 5px;
-  border-radius: none;
   border: 2px solid black;
+  border-radius: none;
+  padding: .5em 2em;
   background-color: white;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: black;
+  color: white;
 }
 /*# sourceMappingURL=main.css.map */
