--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -10,6 +10,10 @@
 
 .heading-primary {
     font-size: 7.5rem;
+
+    @media screen and (max-width: 700px) {
+        font-size: 6rem;
+    }
 }
 
 .heading-secondary {
