--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,41 +3,73 @@
     color: #fff;
     padding: 4rem 12rem;
 
+    display: grid;
+    grid-template-areas: 
+        "logo social"
+        "links copyright"
+    ;
+
+    gap: 2rem;
+
+    @media screen and (max-width: 700px) {
+        grid-template-areas: 
+            "logo"
+            "links"
+            "social"
+            "copyright"
+        ;
+        gap: 3rem;
+        text-align: center;
+        padding: 4rem;
+    }
+
     .brand__img, .brand {
         height: 24px;
     }
 
-    &__top, &__bottom {
-        @include flex(row, space-between, center);
-    }
-
-    &__top {
-        margin-bottom: 2rem;
-    }
-
-    &__bottom {
-        margin-top: 2rem;
-    }
-
     &__social {
+        grid-area: social;
         display: flex;
         font-size: 24px;
+        justify-content: flex-end;
 
         &-icon + &-icon {
             margin-left: 12px;
         }
+
+        @media screen and (max-width: 700px) {
+            justify-content: center;   
+        }
     }
 
     &__links {
+        grid-area: links;
         display: flex;
         list-style: none;
+        @media screen and (max-width: 700px) {
+            flex-direction: column;
+            justify-content: center;   
+            font-size: 2rem;
+        }
     }
 
     &__link-item + &__link-item {
         margin-left: 2.4rem;
+
+        @media screen and (max-width: 700px) {
+            margin-left: 0;
+            margin-top: 2rem; 
+        }
     }
 
     &__copyright {
+        text-align: right;
+        grid-area: copyright;
         color: $col-very-dark-grey;
+
+        @media screen and (max-width: 700px) {
+            text-align: center;
+            font-size: 2rem;
+        }
     }
 }
