--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,11 +2,19 @@
 	height: 65rem;
 	background: url("../../images/desktop/image-hero.jpg");
 	background-position: 50% 50%;
+	background-size: cover;
 	color: $col-white;
 	padding: 6rem 10rem;
 	position: relative;
 
 	@include flex(column, space-between, stretch);
+
+	@media screen and (max-width: 700px) {
+		height: 100vh;
+		background: url("../../images/mobile/image-hero.jpg");
+		background-size: cover;
+		padding: 6rem 3rem;
+	}
 
 	&::before {
 		content: "";
@@ -34,6 +42,14 @@
 		margin-bottom: 7rem;
 		
         border: 2px solid $col-white;
+
+		@media screen and (max-width: 700px) {
+			width: 100%;
+			min-width: auto;
+			height: auto;
+			margin-bottom: 20vh;
+			padding: 1.5rem;
+		}
 	}
 }
 
@@ -41,6 +57,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	z-index: 2;
 
 	&__list {
 		display: flex;
@@ -55,6 +72,54 @@
 
 		&-item + &-item {
 			margin-left: 3rem;
+		}
+
+		@media screen and (max-width: 700px) {
+			display: none;
+		}
+	}
+
+	&__mobile {
+
+		&-wrapper {
+			visibility: hidden;
+			padding: 4rem;
+
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: $col-black;
+
+			&__top {
+				@include flex(row, space-between, center);
+			}
+		}
+
+		&__list {
+			list-style-type: none;
+			@include flex(column, center, flex-start);
+			height: 100vh;
+
+			&-item a {
+				text-decoration: none;
+				text-transform: uppercase;
+				font-size: 3rem;
+				font-family: $font-1;
+				color: #fff;
+			}
+
+			&-item {
+				& + & {
+					margin-top: 4rem;
+				}
+			}
+		}
+
+
+		@media screen and (min-width: 700px) {
+			display: none;
 		}
 	}
 }
