animate hero text border and nav items

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -4,3 +4,9 @@
     justify-content: $justify;
     align-items: $align;
 }
+
+@mixin animateborder($name, $duration) {
+    animation-name: $name;
+    animation-duration: $duration;
+    animation-fill-mode: forwards;
+}
