--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,3 +7,6 @@ $col-very-dark-grey: hsl(0, 0%, 41%);
 // fonts: 
 $font-1: 'Josefin Sans', sans-serif;
 $font-2: 'Alata', sans-serif;
+
+// animation times
+$animate-border-time: 1.6s;
