--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,114 @@ body {
   font-size: 1.4rem;
 }
 
+@-webkit-keyframes topleft {
+  0% {
+    width: 0%;
+  }
+  25% {
+    width: 100%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes topleft {
+  0% {
+    width: 0%;
+  }
+  25% {
+    width: 100%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@-webkit-keyframes topright {
+  0% {
+    height: 0%;
+  }
+  25% {
+    height: 0%;
+  }
+  50% {
+    height: 100%;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+@keyframes topright {
+  0% {
+    height: 0%;
+  }
+  25% {
+    height: 0%;
+  }
+  50% {
+    height: 100%;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+@-webkit-keyframes bottomright {
+  0% {
+    width: 0%;
+  }
+  50% {
+    width: 0%;
+  }
+  75% {
+    width: 100%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes bottomright {
+  0% {
+    width: 0%;
+  }
+  50% {
+    width: 0%;
+  }
+  75% {
+    width: 100%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@-webkit-keyframes bottomleft {
+  0% {
+    height: 0%;
+  }
+  75% {
+    height: 0%;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+@keyframes bottomleft {
+  0% {
+    height: 0%;
+  }
+  75% {
+    height: 0%;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
 .hero {
   height: 65rem;
   background: url("../../images/desktop/image-hero.jpg");
@@ -118,7 +226,67 @@ body {
   height: fit-content;
   padding: 3rem;
   margin-bottom: 7rem;
-  border: 2px solid white;
+}
+
+.hero__heading .box::before,
+.hero__heading .box::after,
+.hero__heading .box-helper::before,
+.hero__heading .box-helper::after {
+  content: '';
+  position: absolute;
+  background-color: white;
+}
+
+.hero__heading .box::before {
+  width: 0%;
+  height: 3px;
+  top: 0;
+  left: 0;
+  -webkit-animation-name: topleft;
+          animation-name: topleft;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.hero__heading .box::after {
+  width: 0%;
+  height: 3px;
+  bottom: 0;
+  right: 0;
+  -webkit-animation-name: bottomright;
+          animation-name: bottomright;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.hero__heading .box-helper::before {
+  width: 3px;
+  height: 0%;
+  top: 0;
+  right: 0;
+  -webkit-animation-name: topright;
+          animation-name: topright;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.hero__heading .box-helper::after {
+  width: 3px;
+  height: 0%;
+  bottom: 0;
+  left: 0;
+  -webkit-animation-name: bottomleft;
+          animation-name: bottomleft;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @media screen and (max-width: 700px) {
@@ -151,9 +319,35 @@ body {
   list-style-type: none;
 }
 
+.nav__list-item {
+  position: relative;
+  padding-bottom: 2px;
+}
+
 .nav__list-item a {
-  color: #fff;
+  color: white;
   text-decoration: none;
+}
+
+.nav__list-item::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: -2px;
+  left: 0;
+  background-color: white;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+}
+
+.nav__list-item:hover::before {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 .nav__list-item + .nav__list-item {
@@ -216,7 +410,7 @@ body {
   text-transform: uppercase;
   font-size: 3rem;
   font-family: "Josefin Sans", sans-serif;
-  color: #fff;
+  color: white;
 }
 
 .nav__mobile__list-item + .nav__mobile__list-item {
