--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -28,7 +28,7 @@
 .creations__card-text {
     font-family: $font-1;
     text-transform: uppercase;
-    color: #fff;
+    font-weight: 300;
     font-size: 3rem;
 }
 
