--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -78,8 +78,6 @@
 			left: 0;
 			@include animateborder(bottomleft, $animate-border-time);
 		}
-
-
 		
         // border: 2px solid $col-white;
 
@@ -99,37 +97,19 @@
 	align-items: center;
 	z-index: 2;
 
+
+
 	&__list {
 		display: flex;
 		list-style-type: none;
 
 		&-item {
-			position: relative;
-			padding-bottom: 2px;
-
 			a {
 				color: $col-white;
 				text-decoration: none;
 			}
 
-			&::before {
-				content: '';
-				
-				position: absolute;
-				width: 100%;
-				height: 3px;
-				bottom: -2px;
-				left: 0;
-
-				background-color: $col-white;
-				
-				transition: transform .2s;
-				transform: scaleX(0);
-			}
-
-			&:hover::before {
-				transform: scaleX(1);
-			}
+			@include underline_animation;
 		}
 
 		&-item + &-item {
