--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,134 +1,155 @@
 main {
-    padding: 14rem 12rem 0;
+	padding: 14rem 12rem 0;
 
-    @media screen and (max-width: 900px) {
-        padding: 8rem 8rem 0;
-    }
+	@media screen and (max-width: 900px) {
+		padding: 8rem 8rem 0;
+	}
 
-    @media screen and (max-width: 700px) {
-        padding: 4rem 4rem 0;
-    }
+	@media screen and (max-width: 700px) {
+		padding: 4rem 4rem 0;
+	}
 }
 
 .copy {
-    display: flex;
-    position: relative;
-    align-items: center;
+	display: flex;
+	position: relative;
+	align-items: center;
 
-    @media screen and (max-width: 850px) {
-        flex-direction: column;
-        text-align: center;
-    }
+	@media screen and (max-width: 850px) {
+		flex-direction: column;
+		text-align: center;
+	}
 
-    &__img {
-        width: 65%;
-        @media screen and (max-width: 1300px) {
-            width: 50%;
-            min-width: 400px;
-            height: auto;
-        }
-    }
+	&__img {
+		width: 65%;
+		@media screen and (max-width: 1300px) {
+			width: 50%;
+			min-width: 400px;
+			height: auto;
+		}
+	}
 
-    &__text {
-        padding: 9rem 7rem 0 12rem;
-        position: absolute;
-        background-color: #fff;
-        bottom: 0;
-        right: 0;
-        width: 50%;
+	&__text {
+		padding: 9rem 7rem 0 12rem;
+		position: absolute;
+		background-color: #fff;
+		bottom: 0;
+		right: 0;
+		width: 50%;
 
-        @media screen and (max-width: 1300px) {
-            position: relative;
-            padding: 3rem;
-        }
+		@media screen and (max-width: 1300px) {
+			position: relative;
+			padding: 3rem;
+		}
 
-        @media screen and (max-width: 850px) {
-            width: 90%;
-        }
-    }
+		@media screen and (max-width: 850px) {
+			width: 90%;
+		}
+	}
 
-    &__para {
-        margin-top: 2rem;
-    }
+	&__para {
+		margin-top: 2rem;
+	}
 }
 
 .creations {
-    margin: 20rem 0;
-    @media screen and (max-width: 900px) {
-        margin: 10rem 0;
-    }
+	margin: 20rem 0;
+	@media screen and (max-width: 900px) {
+		margin: 10rem 0;
+	}
 
-    display: grid;
-    grid-template-areas: 
-        "h . b"
-        "g g g"
-    ;
-    gap: 10rem;
+	display: grid;
+	grid-template-areas:
+		"h . b"
+		"g g g";
+	gap: 10rem;
 
-    @media screen and (max-width: 900px) {
-        gap: 5rem;
-    }
+	@media screen and (max-width: 900px) {
+		gap: 5rem;
+	}
 
-    @media screen and (max-width: 700px) {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-areas: 
-            "h h ."
-            "g g g"
-            ". b ."
-        ;
-    }
+	@media screen and (max-width: 700px) {
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-areas:
+			"h h ."
+			"g g g"
+			". b .";
+	}
 
-    @media screen and (max-width: 600px) {
-        grid-template-areas: 
-            "h h h"
-            "g g g"
-            "b b b"
-        ;
-    }
+	@media screen and (max-width: 600px) {
+		grid-template-areas:
+			"h h h"
+			"g g g"
+			"b b b";
+	}
 
-    h1 {
-        grid-area: h;
-    }
+	h1 {
+		grid-area: h;
+	}
 
-    .btn {
-        grid-area: b;
-    }
+	.btn {
+		grid-area: b;
+	}
 
-    &__grid {
-        grid-area: g;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
-        align-items: center;
-        justify-items: center;
-        gap: 3rem;
-    }
+	&__grid {
+		grid-area: g;
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+		align-items: center;
+		justify-items: center;
+		gap: 3rem;
+	}
 
-    &__card {
-        position: relative;
-        width: 100%;
-        @include flex(column, stretch, stretch);
+	&__card {
+		position: relative;
+		width: 100%;
+		@include flex(column, stretch, stretch);
+		cursor: pointer;
+		height: 100%;
+		overflow: hidden;
 
-        &::before {
-            content: '';
-            background: linear-gradient(to bottom, transparent 50%, rgba(black, 0.7) 100%);
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+		}
 
-        &-bg {
-            width: 100%;
-            height: 100%;
-        }
+		&::before {
+			background: linear-gradient(to bottom, transparent 50%, rgba(black, 0.7) 100%);
+		}
 
-        &-text {
-            width: 50%;
-            word-break: keep-all;
-            position: absolute;
-            bottom: 1em;
-            left: 1em;
-        }
-    }
+		&::after {
+			background: rgba($col-white, 0.6);
+            transition: all .2s ease;
+			transform: translateX(-100%);
+		}
+
+		&-bg {
+			width: 100%;
+			height: 100%;
+		}
+
+		&-text {
+			width: 50%;
+			word-break: keep-all;
+			position: absolute;
+			bottom: 1em;
+			left: 1em;
+			color: $col-white;
+            z-index: 1;
+		}
+
+		&:hover &-text {
+			color: $col-black;
+            font-weight: 500;
+		}
+
+		&:hover::after {
+            transform: translateX(0);
+		}
+	}
 }
