add animation on scroll

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -19,10 +19,11 @@
         content: '';
         
         position: absolute;
-        width: 100%;
+        border-radius: 10px;
+        width: 80%;
         height: 3px;
         bottom: -2px;
-        left: 0;
+        left: 10%;
     
         background-color: $col-white;
         
