--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 .hero {
@@ -168,6 +169,61 @@ body {
   100% {
     height: 100%;
   }
+}
+
+.fade {
+  -webkit-transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+  transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in, -webkit-transform 400ms ease-in;
+}
+
+.fade-in-top {
+  opacity: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.fade-in-top.appear {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.fade-in-bottom {
+  opacity: 0;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+}
+
+.fade-in-bottom.appear {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.fade-in-left {
+  opacity: 0;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.fade-in-left.appear {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.fade-in-right {
+  opacity: 0;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+}
+
+.fade-in-right.appear {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .hero {
@@ -332,10 +388,11 @@ body {
 .nav__list-item::before {
   content: '';
   position: absolute;
-  width: 100%;
+  border-radius: 10px;
+  width: 80%;
   height: 3px;
   bottom: -2px;
-  left: 0;
+  left: 10%;
   background-color: white;
   -webkit-transition: -webkit-transform .2s;
   transition: -webkit-transform .2s;
@@ -358,6 +415,10 @@ body {
   .nav__list {
     display: none;
   }
+}
+
+.nav__hamburger, .nav__close {
+  cursor: pointer;
 }
 
 .nav__mobile-wrapper {
@@ -672,10 +733,11 @@ main {
 .footer__social-icon::before {
   content: '';
   position: absolute;
-  width: 100%;
+  border-radius: 10px;
+  width: 80%;
   height: 3px;
   bottom: -2px;
-  left: 0;
+  left: 10%;
   background-color: white;
   -webkit-transition: -webkit-transform .2s;
   transition: -webkit-transform .2s;
@@ -734,10 +796,11 @@ main {
 .footer__link-item::before {
   content: '';
   position: absolute;
-  width: 100%;
+  border-radius: 10px;
+  width: 80%;
   height: 3px;
   bottom: -2px;
-  left: 0;
+  left: 10%;
   background-color: white;
   -webkit-transition: -webkit-transform .2s;
   transition: -webkit-transform .2s;
@@ -750,6 +813,13 @@ main {
 .footer__link-item:hover::before {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
+}
+
+@media screen and (max-width: 700px) {
+  .footer__link-item::before {
+    width: 10%;
+    left: 45%;
+  }
 }
 
 .footer__link-item + .footer__link-item {
