--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -45,6 +45,15 @@ main {
 		@media screen and (max-width: 850px) {
 			width: 90%;
 		}
+
+        @media screen and (max-width: 700px) {
+			width: 100%;
+		}
+
+        @media screen and (max-width: 500px) {
+            padding: 0;
+            padding-top: 3rem;
+		}
 	}
 
 	&__para {
