--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 .hero {
 	height: 65rem;
-	background: url("/images/desktop/image-hero.jpg");
+	background-image: url("/images/desktop/image-hero.jpg");
 	background-position: 50% 50%;
 	background-size: cover;
 	color: $col-white;
@@ -11,7 +11,7 @@
 
 	@media screen and (max-width: 700px) {
 		height: 100vh;
-		background: url("/images/mobile/image-hero.jpg");
+		background-image: url("/images/mobile/image-hero.jpg");
 		background-size: cover;
 		padding: 6rem 3rem;
 
